fix(bus): make bus status indicators visible in dark mode

--- a/intranet/static/css/dark/bus.scss
+++ b/intranet/static/css/dark/bus.scss
@@ -10,6 +10,10 @@ svg path.a[style*="stroke: black;"] {
     stroke: white !important;
 }
 
+h2.colored-header {
+    color: #0D0D0B;
+}
+
 @media (max-width: 550px) {
     .action-view.search-widget {
         &, .search-widget {
